--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "define"
+name = "python-define"
 version = "0.1.0"
 description = "An OpenAI powered command-line linguistics assistant"
 readme = "README.md"
