fix: updated to new openai api

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "python-define"
-version = "1.3.0"
+version = "1.3.1"
 description = "An OpenAI powered command-line linguistics assistant"
 readme = "README.md"
 requires-python = ">=3.8"
@@ -13,8 +13,8 @@ maintainers = [
 ]
 keywords = ["define", "openai", "llm", "english", "linguistics", "cli"]
 dependencies = [
-  "Click",
-  "openai",
+  "Click=8.1.7",
+  "openai=1.25.0",
 ]
 
 [project.urls]
